<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LoginBinding">

    </data>

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.Tour1_Fragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".ui.Activities.TourMain">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_marginTop="@dimen/dp_50"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/margin_250"
                        android:layout_height="@dimen/dimen_80dp"
                        android:src="@drawable/testseries_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/BigTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/Login" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/NormalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/Enter_your_mobile_number" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/fab_margin"
                        android:paddingRight="@dimen/fab_margin"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="@dimen/dimen_8dp">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_name"
                            android:background="@drawable/subs"
                            android:padding="@dimen/fab_margin"
                            android:id="@+id/editTextname"
                            android:textSize="11sp"
                            android:inputType="text"
                            android:visibility="gone"
                            android:maxLength="10"
                            android:focusableInTouchMode="true"
                            android:layout_margin="@dimen/fab_margin"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/digit_mobile_number"
                            android:background="@drawable/subs"
                            android:padding="@dimen/fab_margin"
                            android:id="@+id/editTextmobile"
                            android:textSize="11sp"
                            android:inputType="number"
                            android:maxLength="10"
                            android:focusableInTouchMode="true"
                            android:layout_margin="@dimen/fab_margin"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/next_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:scaleType="fitCenter">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/next"
                            android:text="@string/Next"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/shape_rounded_orange"/>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/fab_margin"
                            android:gravity="center"
                            android:text="@string/OR"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="@dimen/dimen_10dp">

                        <ImageView
                            android:id="@+id/facebook_login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:background="@null"
                            android:padding="@dimen/dimen_2dp"
                            android:src="@drawable/ic_facebook_trans_9" />

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/google_login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen_5dp"
                            android:layout_marginRight="@dimen/dimen_5dp"
                            android:layout_weight="0.50"
                            android:background="@null"
                            android:padding="@dimen/dimen_2dp"
                            android:src="@drawable/ic_google" />


                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

        <!-- Progress Bar used to show continuous Loader over Screen -->
        <include
            android:id="@+id/progress_layout"
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>
</layout>