<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="PaymentBinding">
        <variable
            name="userInfo"
            type="com.devparadigam.agrade.model.response.UserProfileDetails"/>
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/backg" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/sp_10"
            android:text="@string/Payment_details"
            android:textStyle="bold"
            android:textSize="@dimen/dp_20"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen_150dp"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginLeft="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:visibility="visible"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_mlarge">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:id="@+id/username"
                    android:text="@{userInfo.name}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_40" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="Mock Test 1"
                    android:id="@+id/testname"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end|right"
                    android:src="@drawable/testseries_logo" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_40" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="Rs. 150"
                    android:id="@+id/price"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_80" />



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="@dimen/dimen_8dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digit_mobile_number"
            android:background="@drawable/subs"
            android:padding="@dimen/fab_margin"
            android:id="@+id/editTextmobile"
            android:text="@{userInfo.mobile==null ? ``: ``+userInfo.mobile.toString()}"
            android:textSize="11sp"
            android:inputType="number"
            android:maxLength="10"
            android:focusableInTouchMode="true"
            android:layout_margin="@dimen/fab_margin"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_your_email_address"
            android:background="@drawable/subs"
            android:padding="@dimen/fab_margin"
            android:id="@+id/emailtext"
            android:text="@{userInfo.email==null ? `` : userInfo.email.toString()}"
            android:textSize="11sp"
            android:inputType="textEmailAddress"
            android:focusableInTouchMode="true"
            android:layout_margin="@dimen/fab_margin"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_40dp"
            android:paddingRight="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/sp_10"
            android:background="@drawable/shape_rounded_orange"
            android:text="@string/Submit"
            android:textColor="@color/white" />
            />

    </LinearLayout>

</LinearLayout>
</layout>