<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="ContactusBinding" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">


            <!--  <TextView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:text="Contact us"
                  android:textColor="@color/white"
                  android:textSize="@dimen/dp_20"
                  android:gravity="center_vertical"
                  android:layout_marginLeft="@dimen/dp_50"
                  app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                  app:theme="@style/Toolbar.Light"/>-->


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar.Light"
                app:title="Contact us"
                app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/spacing_xlarge"
                android:orientation="vertical"
                android:paddingBottom="?attr/actionBarSize">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_90"
                    app:fontFamily="sans-serif-light" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:background="@color/colorPrimary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Version"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:id="@+id/buildversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Last_Update"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/January_2020"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/grey_90" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Term_of_services"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_90" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge" />

                <TextView
                    android:id="@+id/urlText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="http://agradeclasses.com/terms.php"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />


                <WebView
                    android:id="@+id/webView"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    tools:ignore="WebViewLayout" />
            </LinearLayout>


        </RelativeLayout>




    </LinearLayout>
</layout>